Closed
Bug 344505
Opened 20 years ago
Closed 20 years ago
role="anything" on <table> should remove roleless <td>'s, <th's> from hierarchy
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: George.G, Assigned: aaronlev)
References
(Blocks 1 open bug)
Details
(Keywords: access, Whiteboard: Low risk, bug was reported by a significant adopter of DHTML a11y)
Attachments
(2 files)
|
1.20 KB,
patch
|
pilgrim
:
review+
|
Details | Diff | Splinter Review |
|
257 bytes,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; de; rv:1.8.0.4) Gecko/20060508 Firefox/1.5.0.4
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; de; rv:1.8.0.4) Gecko/20060508 Firefox/1.5.0.4
In a layout table, that I use to place radiobuttons one after the other on the screen, I use the role "radiogroup". Using this role I expect that the radiobuttons inside the table would be recognized as belonging together, so that if I focus the first radiobutton it will be announced as "one of n" by an AT. Instead it is announced as "one of one".
For example: I use a layout table with two cells. Each cell has a radiobutton. I give the table-tag the role "radiogroup". I connect all radiobuttons by giving their name attribute the same value (although this does not seem to be neccessary here). This could look like this:
I want to travel by:
o Car
o Plane
If I focus the first radiobutton I would expect the announcement "car - 1 of 2". But the announcement is "1 of 1"!!. Only if I change the role declared in the layout table from "radiogroup" to "presentaion", I will get the expected announcement. I think this could be amistake in the role "radiogroup".
Reproducible: Always
Steps to Reproduce:
1. Build a HTML layout table with two rows and one cell in each row.
2. Give the table the role "radiogroup"
3. Place a span container into each cell and give it the role "radiobutton" and a tabindex=0
4. Launch Jaws 7.x and focus the first span.
5. Oserve that it is announced as "one of one"
6. Change the the table role to "presentation" and refocus the first span.
7. Observe that it is now announced as "one of two"
Actual Results:
radiobutton group causes wrong annpouncement in list of radiobuttons. Each radiobutton is "one of one"
Expected Results:
should be "x of n" (= one of 17)
dhtmla11y
| Assignee | ||
Updated•20 years ago
|
| Assignee | ||
Updated•20 years ago
|
Summary: access radiogroup → role="anything" on <table> should remove roleless <td>'s, <th's> from hierarchy
| Assignee | ||
Comment 1•20 years ago
|
||
Georgios, do you have a small testcase file?
| Assignee | ||
Comment 2•20 years ago
|
||
| Assignee | ||
Comment 3•20 years ago
|
||
| Assignee | ||
Updated•20 years ago
|
Attachment #229522 -
Attachment description: Not tested. Should work. → Any role on a table means the table structure descendants are no longer structurally relevant, unless they have their own role. They're being used to layout the container.
Attachment #229522 -
Flags: review?(pilgrim)
Updated•20 years ago
|
Attachment #229522 -
Flags: review?(pilgrim) → review+
| Assignee | ||
Updated•20 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•20 years ago
|
Attachment #229522 -
Flags: approval1.8.1?
| Assignee | ||
Updated•20 years ago
|
Whiteboard: Low risk, bug was reported by a significant adopter of DHTML a11y
| Assignee | ||
Updated•20 years ago
|
Attachment #229522 -
Flags: approval1.8.1? → superreview?
| Assignee | ||
Updated•20 years ago
|
Attachment #229522 -
Flags: superreview?
You need to log in
before you can comment on or make changes to this bug.
Description
•