Bug 344505. Any accessible role on a table means the descendant table structures are not relevant unless they have a role. r=pilgrim